<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.movienighttrivia.Potter">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:scaleType="fitXY"
            android:src="@drawable/harry" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/harryDarkBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <!--Question 1-->
            <TextView
                android:id="@+id/questions"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ1" />

            <RadioGroup
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q1A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ1A1" />

                <RadioButton
                    android:id="@+id/Q1A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ1A2" />

                <RadioButton
                    android:id="@+id/Q1A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ1A3" />

                <RadioButton
                    android:id="@+id/Q1A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ1A4" />
            </RadioGroup>

            <!--Question 2-->
            <TextView
                android:id="@+id/question2"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ2" />

            <RadioGroup
                android:id="@+id/question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q2A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ2A1" />

                <RadioButton
                    android:id="@+id/Q2A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ2A2" />

                <RadioButton
                    android:id="@+id/Q2A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ2A3" />

                <RadioButton
                    android:id="@+id/Q2A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ2A4" />
            </RadioGroup>

            <!--Question 3-->
            <TextView
                android:id="@+id/question3"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ3" />

            <RadioGroup
                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q3A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ3A1" />

                <RadioButton
                    android:id="@+id/Q3A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ3A2" />

                <RadioButton
                    android:id="@+id/Q3A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ3A3" />

                <RadioButton
                    android:id="@+id/Q3A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ3A4" />
            </RadioGroup>

            <!--Question 4-->
            <TextView
                android:id="@+id/question4"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ4" />

            <RadioGroup
                android:id="@+id/question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q4A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ4A1" />

                <RadioButton
                    android:id="@+id/Q4A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ4A2" />

                <RadioButton
                    android:id="@+id/Q4A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ4A3" />

                <RadioButton
                    android:id="@+id/Q4A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ4A4" />
            </RadioGroup>

            <!--Question 5-->
            <TextView
                android:id="@+id/question5"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ5" />

            <RadioGroup
                android:id="@+id/question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q5A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ5A1" />

                <RadioButton
                    android:id="@+id/Q5A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ5A2" />

                <RadioButton
                    android:id="@+id/Q5A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ5A3" />

                <RadioButton
                    android:id="@+id/Q5A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ5A4" />
            </RadioGroup>

            <!--Question 6-->
            <TextView
                android:id="@+id/question6"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ6" />

            <RadioGroup
                android:id="@+id/question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q6A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ6A1" />

                <RadioButton
                    android:id="@+id/Q6A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ6A2" />

                <RadioButton
                    android:id="@+id/Q6A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ6A3" />

                <RadioButton
                    android:id="@+id/Q6A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ6A4" />
            </RadioGroup>

            <!--Question 7-->
            <TextView
                android:id="@+id/question7"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ7" />

            <CheckBox
                android:id="@+id/Q7A1"
                style="@style/harryA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/harryQ7A1" />

            <CheckBox
                android:id="@+id/Q7A2"
                style="@style/harryA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/harryQ7A2" />

            <CheckBox
                android:id="@+id/Q7A3"
                style="@style/harryA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/harryQ7A3" />

            <CheckBox
                android:id="@+id/Q7A4"
                style="@style/harryA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/harryQ7A4" />

            <!--Question 8-->
            <TextView
                android:id="@+id/question8"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ8" />

            <RadioGroup
                android:id="@+id/question_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q8A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ8A1" />

                <RadioButton
                    android:id="@+id/Q8A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ8A2" />

                <RadioButton
                    android:id="@+id/Q8A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ8A3" />

                <RadioButton
                    android:id="@+id/Q8A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ8A4" />
            </RadioGroup>

            <!--Question 9-->
            <TextView
                android:id="@+id/question9"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ9" />

            <EditText
                android:id="@+id/question_9"
                style="@style/harryA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter answer here..."
                android:inputType="text"
                android:maxLength="20" />

            <!--Question 10-->
            <TextView
                android:id="@+id/question10"
                style="@style/harry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harryQ10" />

            <RadioGroup
                android:id="@+id/question_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q10A1"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ10A1" />

                <RadioButton
                    android:id="@+id/Q10A2"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ10A2" />

                <RadioButton
                    android:id="@+id/Q10A3"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ10A3" />

                <RadioButton
                    android:id="@+id/Q10A4"
                    style="@style/harryA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harryQ10A4" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#020e14"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="getScore"
                android:text="Submit Answers"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/score_"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>